[package]
name = "bt"
version = "0.1.0"
authors = ["Daniel Lublin <daniel@lublin.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boringtun = { git = "https://github.com/cloudflare/boringtun", branch = "master" }
clap = "2.33.0"

